Enum AdminRole {
  ADMIN
  STAFF
}

Enum ProductCategory {
  Coffee
  Tea
  Juice
  Pastry
}

Enum ProductStatus {
  Available
  OutOfStock [note: 'Mapped from "Out of Stock"']
}

Enum OrderType {
  Delivery
  Pickup
}

Enum OrderStatus {
  New
  Accepted
  Preparing
  Delivering
  Delivered
  Cancelled
}

Enum PaymentMethod {
  CASH
  BANK_TRANSFER
  ZALOPAY
  VNPAY
}

Enum PaymentStatus {
  PAID
  UNPAID
  REFUNDED
}

Enum DiscountType {
  PERCENT
  FIXED_AMOUNT
  BUY_ONE_GET_ONE
}

Enum NotificationType {
  promo
  order
  news
}

Table admin_users {
  id uuid [pk]
  username varchar [unique, not null]
  password_hash varchar [not null]
  role AdminRole [not null]
}

Table customers {
  id uuid [pk]
  zalo_id varchar [unique, not null, note: 'Dinh danh user qua Zalo']
  name varchar [not null]
  phone varchar [unique]
  email varchar [unique]
  avatar_text varchar
  created_at timestamp [not null, default: `now()`]
}

Table customer_addresses {
  id uuid [pk]
  customer_id uuid [not null]
  label varchar [note: 'Nha rieng, cong ty...']
  receiver varchar
  phone varchar
  address text [not null]
  is_default boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]
}

Table store_locations {
  id uuid [pk]
  name varchar [not null]
  address text [not null]
  phone varchar
  latitude decimal
  longitude decimal
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]
}

Table products {
  id uuid [pk]
  created_by_admin_id uuid [note: 'Admin tao san pham']
  updated_by_admin_id uuid [note: 'Admin cap nhat san pham lan cuoi']
  name varchar [not null]
  subname varchar
  category ProductCategory [not null]
  price decimal [not null]
  price_vnd int [not null]
  rating decimal [note: 'Diem danh gia hien tren mini app']
  image text
  status ProductStatus [not null, default: 'Available']
  details text
  description text [note: 'Mo ta chi tiet tren mini app']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]
}

Table product_tags {
  id uuid [pk]
  product_id uuid [not null]
  created_by_admin_id uuid [note: 'Admin tao tag']
  updated_by_admin_id uuid [note: 'Admin cap nhat tag lan cuoi']
  name varchar [not null, note: 'Best Seller, Fresh, Organic...']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]

  indexes {
    (product_id, name) [unique]
  }
}

Table vouchers {
  id uuid [pk]
  created_by_admin_id uuid [note: 'Admin tao voucher']
  updated_by_admin_id uuid [note: 'Admin cap nhat voucher lan cuoi']
  code varchar [unique, not null, note: 'VD: HOTDEAL']
  title varchar [not null]
  description text
  image text [note: 'Anh chuong trinh khuyen mai neu mini app can hien thi']
  discount_type DiscountType [not null]
  discount_value int [not null, default: 0]
  min_order_vnd int [not null, default: 0]
  max_discount_vnd int
  applicable_categories ProductCategory[] [note: 'Coffee/Tea cho voucher mua 1 tang 1']
  starts_at timestamp
  ends_at timestamp
  usage_limit int
  used_count int [not null, default: 0]
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]
}

Table orders {
  id varchar [pk, note: 'Example: #BB-2094']
  customer_id uuid
  customer_address_id uuid [note: 'Dia chi da luu cua khach khi delivery']
  store_location_id uuid [note: 'Cua hang nhan mon khi pickup']
  voucher_id uuid [note: 'Voucher/chuong trinh khuyen mai ap dung cho don']
  handled_by_admin_id uuid [note: 'Admin/staff xu ly don']
  customer_name varchar [note: 'Snapshot ten khach hang']
  customer_phone varchar [note: 'Snapshot so dien thoai']
  type OrderType [not null]
  status OrderStatus [not null, default: 'New']
  payment_method PaymentMethod [not null, default: 'CASH']
  payment_status PaymentStatus [not null, default: 'UNPAID']
  subtotal_vnd int [not null, default: 0]
  discount_vnd int [not null, default: 0]
  shipping_fee_vnd int [not null, default: 0]
  total_price decimal [not null]
  total_price_vnd int [not null]
  note text
  address text [note: 'Snapshot dia chi giao hang hoac dia chi cua hang tai luc dat']
  accepted_at timestamp [note: 'Thoi diem admin nhan don, dung de huy neu qua han thanh toan']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]
}

Table order_items {
  id uuid [pk]
  order_id varchar [not null]
  product_id uuid
  name varchar [not null, note: 'Snapshot ten san pham luc dat']
  quantity int [not null]
  price decimal [not null]
  price_vnd int [not null]
  options jsonb [note: 'Example: {"size":"M","sweetness":"50%","ice":"100%"}']
}

Table notifications {
  id uuid [pk]
  customer_id uuid [note: 'Null neu la thong bao toan he thong']
  created_by_admin_id uuid [note: 'Admin tao thong bao']
  title varchar [not null]
  description text [not null]
  type NotificationType [not null]
  image text
  is_read boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
}

Ref: orders.customer_id > customers.id
Ref: customer_addresses.customer_id > customers.id [delete: cascade]
Ref: orders.customer_address_id > customer_addresses.id
Ref: orders.store_location_id > store_locations.id
Ref: orders.voucher_id > vouchers.id
Ref: orders.handled_by_admin_id > admin_users.id
Ref: order_items.order_id > orders.id
Ref: order_items.product_id > products.id
Ref: product_tags.product_id > products.id [delete: cascade]
Ref: product_tags.created_by_admin_id > admin_users.id
Ref: product_tags.updated_by_admin_id > admin_users.id
Ref: notifications.customer_id > customers.id
Ref: notifications.created_by_admin_id > admin_users.id
Ref: products.created_by_admin_id > admin_users.id
Ref: products.updated_by_admin_id > admin_users.id
Ref: vouchers.created_by_admin_id > admin_users.id
Ref: vouchers.updated_by_admin_id > admin_users.id
